[tool.poetry]
name = "spamton"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
disnake = "^2.1.4"
Flask = "^2.0.2"
jishaku = "^2.3.0"
motor = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
